--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="splash" class="splash">
+  <div class="splash" id="splash-screen">
     <h1>this site is 18+ only.</h1>
-    <div class="buttons">
+    <div class="btn-wrap">
       <button class="pill" onclick="enterSite()">♡ enter ♡</button>
-      <a href="https://google.ca" class="pill exit">exit</a>
+      <a class="pill" href="https://google.ca">exit</a>
     </div>
   </div>
 
-  <div id="main" class="main hidden">
-    <img src="logo.png" alt="citybunny" class="logo"/>
-    <div class="link-buttons">
-      <a class="pill" href="https://onlyfans.com/citybunny" target="_blank">onlyfans</a>
-      <a class="pill" href="https://throne.com/citybunny" target="_blank">wishlist</a>
-      <a class="pill" href="mailto:citybunbun@gmail.com">email me</a>
-      <a class="pill" href="#" target="_blank">♡ spoil me ♡</a>
+  <div id="main-site" class="hidden">
+    <img src="logo.png" alt="citybunny" class="logo" />
+    <div class="buttons">
+      <a href="https://onlyfans.com/yourlink" class="pill">onlyfans</a>
+      <a href="https://throne.com/yourlink" class="pill">wishlist</a>
+      <a href="https://buy.stripe.com/yourlink" class="pill">♡ spoil me ♡</a>
+      <a href="mailto:citybunbun@gmail.com" class="pill">email me</a>
     </div>
   </div>
 
