--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
   </div>
 
   <div id="main-site" class="hidden">
-    <img src="logo.png" alt="citybunny" class="logo" />
+    <img src="logo.gif" alt="citybunny" class="logo" />
     <div class="buttons">
-      <a href="https://onlyfans.com/yourlink" class="pill">onlyfans</a>
-      <a href="https://throne.com/yourlink" class="pill">wishlist</a>
-      <a href="https://buy.stripe.com/yourlink" class="pill">♡ spoil me ♡</a>
+      <a href="https://onlyfans.com/c1tybunny" class="pill" target="_blank">onlyfans</a>
+      <a href="https://throne.com/citybunny" class="pill" target="_blank">wishlist</a>
+      <a href="https://x.com/c1tybunny" class="pill" target="_blank">X / twitter</a>
+      <a href="https://instagram.com/c1tybunny" class="pill" target="_blank">instagram</a>
       <a href="mailto:citybunbun@gmail.com" class="pill">email me</a>
+      <a href="https://buy.stripe.com/fZebKZbNPazrczCcMM" class="pill" target="_blank">♡ spoil me ♡</a>
     </div>
   </div>
 
